# llm-augmentation-scoring

./: .gitignore  GeneratingData.ipynb  GroupedData.ipynb  HighestLowestFScore.ipynb  README.md  baseline_llm_scoring.py  baseline_majority.py  calculate_answer_statistics.py  compare_balanced.py  compare_balanced_clean.py  compare_balanced_clean_deep.py  compare_data_quality.py  compare_data_quality_LR.py  compare_data_quality_deep.py  compare_data_quality_pretrained.py  compare_same_distribution.py  compare_same_distribution_clean.py  compare_same_distribution_clean_deep.py  compare_same_distribution_deep.py  data_generation.py  exp_deep_learning.py  exp_pretrained.py  llm_scoring.py  lollipop.ipynb  majority_baseline.py  metrics.py  plot_curve.py  plot_lollipop.py  postprocess_curve_data.py  prompts.py  pyproject.toml  train_bert.py  train_shallow.py  train_similarity.py  train_similarity_pretrained.py  utils.py
data/: compare_token_sets.csv  prompts_without_pictures.csv  stats_llm.csv  stats_orig.csv
generated_llm_answers/: EM_13_llm.csv  EM_21a_llm.csv  EM_26_llm.csv  EM_35_llm.csv  EM_43b_llm.csv  EM_45b_llm.csv  EM_46_llm.csv  EM_47_llm.csv  FN_20a_llm.csv  FN_27a_llm.csv  II_38_llm.csv  LF_18a_llm.csv  LF_31b_llm.csv  LP_15c_llm.csv  ME_27b_llm.csv  ME_36_llm.csv  ME_73_llm.csv  MS_30b_llm.csv  MS_39_llm.csv  MS_43b_llm.csv  MX_10_llm.csv  MX_19_llm.csv  MX_1_llm.csv  MX_22a_llm.csv  MX_24_llm.csv  MX_36b_llm.csv  PS_2a_llm.csv  PS_45b_llm.csv  PS_46b_llm.csv  PS_4ap_llm.csv  PS_4bp_llm.csv  PS_51b_llm.csv  SE_10_llm.csv  SE_44_llm.csv  SE_45_llm.csv  (+8 more)
(+295 files in other folders)
