[tool.poetry]
name = "llm-augmentation-scoring"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.6"
polars = "^1.15.0"
jupyter = "^1.1.1"
scikit-learn = "^1.6.0"
numpy =  "1.26.4"
matplotlib = "^3.9.3"
seaborn = "^0.13.2"
ollama = "^0.4.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
